# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007 Vasco Nunes, Piotr Ożarowski

2007-01-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Updated Swedish translation (thanks to Daniel Nylander)
	* Updated Czech translation and CSFD movie pluging (thanks to Blondak)
	* Updated Portuguese Brazilian translation (thanks to Fábio Nogueira)

2007-01-03 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Using cPickle over pickle for serialization. Config files are now fully cross-platform.

2007-01-03 Piotr Ożarowski <ozarow@gmail.com>
	* Install Polish manpage in ISO-8859-2 encoding
	* Fix clean rule
	* Sort by last added movies option added
	* pysqlite1.1 is not needed anymore

2007-01-02 Piotr Ożarowski <ozarow@gmail.com>
	* Copy volume/collection data when cloning movie
	* Fix displaying loan info (cached data can be obsolete)

2007-01-01 Piotr Ożarowski <ozarow@gmail.com>
	* Filmweb movie plugin updated
	* Added "limit search results to x movies" in preferences
	* Scroll movie list when selecting first/prev/next/last movie button
	* Copy video codec data when cloning movie
	* Fixed displaying volume/collection loan status
	* Seen status can be now set without opening edit window

2006-12-30 Piotr Ożarowski <ozarow@gmail.com>
	* Compare lower() values while importing movies
	* Seen icon moved near to rating, loaned icon removed
	* Speed up main list filling
	* Hide number column option added
	* Add Jessica's icon for seen/unseen movies

2006-12-30 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Under MacOSX Preview.app is used for pdfs now

---- 0.9~rc1 ---

2006-12-24 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some gtk dialogs when converting old db format
	* Fixed some win32 setup includes

2006-12-22 Piotr Ożarowski <ozarow@gmail.com>
	* Polish manpage updated

2006-12-20 Piotr Ożarowski <ozarow@gmail.com>
	* Version changed to 0.9~rc1 (0.7 and 0.8 are skipped because of lots of changes in this release)
	* Merge function and MySQL/PostgreSQL backup disabled for now