@@ -7,9 +7,13 @@
 @rem ***** create the exe 
 @python.exe -OO winsetup.py py2exe
 @mkdir dist\etc
+@mkdir dist\share
+@mkdir dist\share\locale
 
 @xcopy c:\gtk\etc c:\griffith\dist\etc /s /e
 @xcopy c:\gtk\lib c:\griffith\dist\lib /s /e
+@xcopy c:\gtk\share\locale c:\griffith\dist\share\locale /s /e
+
 @copy c:\gtk\share\themes\MS-Windows\gtk-2.0\*.* c:\griffith\dist\
 @copy c:\gtk\bin\jpeg62.dll c:\griffith\dist\
 @rem **** pause so we can see the exit codes 
